vlib/v/checker/tests/immutable_map.vv
fn main() {
	m := map[string]int
	m['test']++
	m['test']--
	_ = m.move()
	m.delete('s')
}
